--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     --text_light: #fff;
     --text_med: #53627c;
     --text_dark: #1e2432;
-    --red: #ff1e42;
-    --darkred: #c3112d;
+    --red: #c81230;
+    --darkred: #0de52d;
     --orange: #ff8c00;
   }
   
