--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --text_med: #53627c;
     --text_dark: #1e2432;
     --red: #c81230;
-    --darkred: #0de52d;
+    --darkgreen: #0de52d;
     --orange: #ff8c00;
   }
   
