--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --darkgreen: #0de52d;
     --orange: #ff8c00;
   }
-  
+
   * {
     margin: 0;
     padding: 0;
@@ -53,6 +53,7 @@
     background: var(--bg_main);
     color: var(--text_dark);
     padding: 70px;
+    background-image: url(imgg.jpg);
   }
   
   .container {
