--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     background: var(--bg_main);
     color: var(--text_dark);
     padding: 70px;
-    background-image: url(imgg.jpg);
+    background-image: url(pic.jpg);
   }
   
   .container 
